Campus plant done.

--- a/campus_plant/front.html
+++ b/campus_plant/front.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -47,9 +47,9 @@
 			<button class="button button1" onclick="location.href='playground.html'">操場</button>
 			<button class="button button1" onclick="location.href='principal-1.html'">校長室</button>
 			<button class="button button1" onclick="location.href='principal-2.html'">校長宿舍</button>
-		</div>
-		<div id="plant_table">
-			<div id="page_01" style="display:block">
+	
+			</div>
+			<div id="page_01" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -65,7 +65,7 @@
 						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Acalypha wilkesianaMuell.-Arg.</td>
 					</tr>
 					<tr>
 						<td>大戟科 Euphorbiaceae</td>
@@ -171,7 +171,7 @@
 					</tr>
 				</table>
 			</div>
-			<div id="page_02" style="display:block">
+			<div id="page_02" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -193,107 +193,107 @@
 						<td>爵床科 Acanthaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3">12</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/12.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('12');">加大拿蓬、小燕草</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Erigeron canadensis Linn.</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3">13</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/13.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('13');">銀邊海衛矛、銀邊正木</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Euonymus japonicus cv.'Argenteo-variegatus'</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>衛矛科 Celastraceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3">14</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/14.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('14');">鳥榕、赤榕、山榕雀榕</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Ficus wightiana Wall.</td>
+					</tr>
+					<tr>
+						<td>桑科 Moraceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">15</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/15.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('15');">福木、福樹</td>
+					</tr>
+					<tr>
+						<td>Garcinia subelliptica Merr.</td>
+					</tr>
+					<tr>
+						<td>籐黃科 Clusiaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">16</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/16.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('16');">扶桑、朱瑾</td>
+					</tr>
+					<tr>
+						<td>Hibiscus rosa-sinensis L.</td>
+					</tr>
+					<tr>
+						<td>錦葵科 Malvaceae</td>
+					</tr>	
+					<tr>
+						<td rowspan="3">17</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/17.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('17');">白茅、茅草</td>
+					</tr>
+					<tr>
+						<td>Imperata cylindrica (L.)Beauv.</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
+					</tr>	
+					<tr>
+						<td rowspan="3">18</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/18.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('18');">馬櫻丹、刺仔花、廣葉美人櫻、龍船花</td>
 					</tr>
 					<tr>
-						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td>Lantana camara L.e</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>馬鞭草科 Verbenaceae</td>
+					</tr>	
+					<tr>
+						<td rowspan="3">19</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/19.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('19');">山櫻花、山櫻桃、緋寒櫻</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>Prunus campanulata Maxim.</td>
 					</tr>
 					<tr>
-						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td>薔薇科 Rosaceae</td>
+					</tr>	
+					<tr>
+						<td rowspan="3">20</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/20.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('20');">垂柳</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Salix babylonica L.</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
-					</tr>
-					<tr>
-						<td>Cassia surattensis Burm.f.</td>
-					</tr>
-					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
-					</tr>
-					<tr>
-						<td>Casuarina equisetifolia L.</td>
-					</tr>
-					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
-					</tr>
-					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
-					</tr>
-					<tr>
-						<td>大戟科 Euphorbiaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
-					</tr>
-					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
-					</tr>
-					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>楊柳科 Salicaceae</td>
 					</tr>
 				</table>
 			</div>
-			<div id="page_03" style="display:block">
+			<div id="page_03" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -302,51 +302,52 @@
 						<td>編號</td>
 						<td>照片</td>
 						<td>名稱</td>
+					</tr>	
+					<tr>
+						<td rowspan="3">21</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/21.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('21');">六月雪、噴雪</td>
 					</tr>
 					<tr>
-						<td rowspan="3">11</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/11.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('11');">狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+						<td>Serissa japonica</td>
 					</tr>
 					<tr>
-						<td>Diclipiera chinensis Juss.</td>
+						<td>茜草科 Rubiaceae</td>
 					</tr>
 					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td rowspan="3">22</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/22.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('22');">黃金側柏</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td>Thuja orientalis L.</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>柏科 Cupressaceae</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td rowspan="3">23</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/23.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('23');">黃鵪菜、黃瓜菜</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td>Youngia japonica (Linn) DC.</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td rowspan="3">24</td>
+						<td rowspan="3"><img class="plant_table_img" src="./front/24.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('24');">高麗草、韓國草、細葉結縷、高麗芝、朝鮮結縷草</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
-					</tr>
-					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Zoysia tenuifolia willd</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
 					</tr>
+						
 				</table>
 			</div>
 		</div>
@@ -354,13 +355,6 @@
 			<button class="button button1" onclick="forwardPage('01');">1</button>
 			<button class="button button1" onclick="forwardPage('02');">2</button>
 			<button class="button button1" onclick="forwardPage('03');">3</button>
-			<button class="button button1" onclick="forwardPage('04');">4</button>
-			<button class="button button1" onclick="forwardPage('05');">5</button>
-			<button class="button button1" onclick="forwardPage('06');">6</button>
-			<button class="button button1" onclick="forwardPage('07');">7</button>
-			<button class="button button1" onclick="forwardPage('08');">8</button>
-			<button class="button button1" onclick="forwardPage('09');">9</button>
-			<button class="button button1" onclick="forwardPage('10');">10</button>
 		</div>
       </div>
     </div>
