--- a/campus_plant/front/table.html
+++ b/campus_plant/front/table.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -336,7 +336,7 @@
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_12" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -347,25 +347,23 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">12</td>
+					<td rowspan="3"><img class="plant_info_img" src="./12.jpg"></td>
+					<td>加大拿蓬、小燕草</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Erigeron canadensis Linn.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">一年生草本，全株被有剛毛或硬毛，莖直立，分枝，高可達150cm，花序具有小葉。根生葉簇生，篦狀披針形，邊緣為粗鋸齒緣。莖生葉互生，無柄，長披針形或線形，邊緣為全緣或微有鋸齒，頭狀花細小，圓錐花序，淡綠色，總苞鐘形，裂片線形或狹披針狀線形，先端銳尖，無毛或散生短硬毛，舌狀花多數，白色，較管狀花稍超出，果為瘦果。。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_13" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -376,25 +374,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">13</td>
+					<td rowspan="3"><img class="plant_info_img" src="./13.jpg"></td>
+					<td>銀邊海衛矛、銀邊正木</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Euonymus japonicus cv.'Argenteo-variegatus'</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>衛矛科 Celastraceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">常綠灌木，株高從60公分至二公尺不等，葉對生，革質富光澤，橢圓形，葉緣有細鋸齒，葉色依品種而別，有全綠，金星（中間黃，邊緣綠），銀邊（中間綠邊緣黃）等斑紋變化，枝葉色彩潔淨，優雅，為優良之插花材料。
+　　性喜溫暖，繁殖可用播種阡插或高壓法，春秋為適期。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_14" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -405,25 +402,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">14</td>
+					<td rowspan="3"><img class="plant_info_img" src="./14.jpg"></td>
+					<td>鳥榕、赤榕、山榕、雀榕 </td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Ficus wightiana Wall.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>桑科 Moraceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">落葉大喬木，每年落葉2～4次；枝幹上生有多數氣生根，但不會形成支柱根。葉互生，嫩葉暗紫紅色有光澤，長橢圓形，叢生於枝端，全緣或波狀緣，具長柄，葉片及嫩枝初呈赤紅色，具有白色之大形苞片。隱花果，球形，長在枝幹上，成熟之果實淡紅色，散生許多小白點。
+　　雀榕成熟之隱花果及托葉可食。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_15" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -434,25 +430,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">15</td>
+					<td rowspan="3"><img class="plant_info_img" src="./15.jpg"></td>
+					<td>福木、福樹</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Garcinia subelliptica Merr.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>籐黃科 Clusiaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">常綠喬木，高可達6公尺，樹形圓錐形，樹幹直，樹皮厚黑褐色，枝幹間成銳角，小枝方形，粗硬。葉對生，葉片肥厚，卵形或橢圓形，全緣，先端圓凹，顏色深綠，葉面平滑有光澤，有柄。雌雄異株，穗狀花序，花萼花瓣各4枚，核果扁球形，熟時橘黃色，內有3～4粒種子。
+　　福木耐旱、耐鹽可為防風林，繁殖可用播種，高壓或阡插，木材可供建材用，樹脂可供黃色染料及藥用。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_16" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -463,25 +458,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">16</td>
+					<td rowspan="3"><img class="plant_info_img" src="./16.jpg"></td>
+					<td>扶桑、朱瑾</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Hibiscus rosa-sinensis L.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>錦葵科 Malvaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">常綠灌木，高1～2.5m，幹直立多分枝，葉廣卵形至卵形披針形互生，有粗鋸齒緣，葉稍厚而光滑，葉柄基部有線形托葉，花由新枝條的葉腋單獨開出，花梗長，花萼五裂，披針形，花瓣五片，螺旋狀排列，花蕊突出於花瓣外，雄蕊密生於柱頭下部，柱頭五裂，蒴果卵形，也有花瓣重瓣的品種。
+　　根及根幹皮有解毒、調經通便消炎之效，葉能解毒、消腫、止血。扶桑花是高雄縣之縣花</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_17" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -492,25 +486,25 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">17</td>
+					<td rowspan="3"><img class="plant_info_img" src="./17.jpg"></td>
+					<td>白茅、茅草</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Imperata cylindrica (L.)Beauv.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>禾本科 Gramineae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">　多年生草本，地下莖匍匐生長，橫向延伸，有節，先端尖銳，若打赤腳在田埂上行走，往往就會被白茅之地下莖刺傷腳底。稈纖細向上直立，高約30～60cm。
+　　葉鞘通常有毛，葉片扁平，線形，平行脈，主脈明顯，長20～40公分，寬7～12公分，先端銳尖。圓錐花序呈圓柱狀，密生白花長絹毛，雄蕊黃褐色二枚，春天開花。
+　　白茅全株煮清水，喝了可退熱，治痲疹、高血壓、黃膽肝炎、流鼻血，花晒乾炒黑可用來止血、鎮痛，此外白茅之莖葉可用來造紙，蓋茅草屋，以其蔓延力強，更可以作固沙之用，白茅之生命力極強，地下莖只要有2～3節留在地下，只要有水分很快便會長出莖葉來。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_18" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -521,25 +515,25 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">18</td>
+					<td rowspan="3"><img class="plant_info_img" src="./18.jpg"></td>
+					<td>馬櫻丹、刺仔花、廣葉美人櫻、龍船花</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Lantana camara L.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>馬鞭草科 Verbenaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">常綠多年生半蔓性灌木，整株植物被有柔毛並具有刺激性的強烈氣味。小枝方形，有刺。單葉，對生，葉卵形，鈍鋸齒緣，葉兩面都有毛，頭狀花序密生成一圓盤狀，頂生或腋生，有梗，苞大，萼小，花冠不規則淺裂，徑7～8mm，花筒細長，四強小蕊，果為核果，球形。全年皆可開花，以夏秋最為盛開，花色有黃、橙黃、紫紅、淡紅等。
+　　馬櫻丹原產熱帶美洲，目前在本省已歸化為本地，蔓生山野被視為雜草雜樹。繁殖以阡插法，剪取不太老的枝條做插穗，插於鬆軟之土中，待發枝再移植。
+　　馬櫻丹除花供觀賞外，根可解熱，活血，治風濕，感冒，葉莖有消腫解毒，袪風止癢，治癰疽，疥瘡，花有清涼解毒止血，治肺癆吐血、頭痛、止瀉、濕疹之效。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_19" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -550,25 +544,23 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">19</td>
+					<td rowspan="3"><img class="plant_info_img" src="./19.jpg"></td>
+					<td>山櫻花、山櫻桃、緋寒櫻</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Prunus campanulata Maxim.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>薔薇科 Rosaceaee</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">落葉中喬木，樹皮茶褐色具水平向線形皮孔，老樹之樹皮常呈片狀剝落。單葉互生，倒卵形或卵狀橢圓形，紙質，鋸齒緣，托葉線形，葉基有一對紅色腺體，葉柄長約1公分，花在葉長出前先開放，通常在1～3月間開花，山上較寒冷處較早開花，每3～5朵簇生於葉腋，下垂，桃紅色，花梗細長，花萼鐘形，花瓣5片，不完全開放。核果卵形未熟時綠色，成熟時紅色，果小但可食。果實成熟時掉落在樹下，即可就地萌芽產生幼苗，將此幼苗移植即可繁殖。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_20" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -579,25 +571,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">20</td>
+					<td rowspan="3"><img class="plant_info_img" src="./20.jpg"></td>
+					<td>垂柳</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Salix babylonica L.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>楊柳科 Salicaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">落葉喬木，枝條纖細而下垂，以致整株呈下垂狀，故名「垂柳」。
+　　葉線狀披針形，柔荑花序雄蕊2枚，雌蕊子房一，無柄，垂柳之根喜潮濕，通常植於水邊，其根系特別發達故可種在河岸供水土保持之用。垂柳易以阡插繁殖，選成熟而未老化之枝條，在葉落後新芽未萌生前（即冬末春初）阡插容易成活。所謂「無心插柳，柳成蔭」就是形容柳樹容易種植。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_21" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -608,25 +599,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">21</td>
+					<td rowspan="3"><img class="plant_info_img" src="./21.jpg"></td>
+					<td>六月雪、噴雪</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Serissa japonica.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>茜草科 Rubiaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">株高50～100cm，葉細小，對生，橢圓形，全緣。夏季開花，腋出，白色漏斗狀，花瓣5～6，花小數多，盛開時白花點點遍佈全株，如同雪花披被，故名六月雪。枝條纖細，分枝濃密，適合整枝剪型。
+　　栽培種有金邊六月雪，葉緣及中肋葉脈處有乳黃色斑紋。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_22" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -637,25 +627,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">22</td>
+					<td rowspan="3"><img class="plant_info_img" src="./22.jpg"></td>
+					<td>黃金側柏</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Thuja orientalis L.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>柏科 Cupressaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">常綠小喬木，枝條側立樹冠圓錐狀，小枝細小略扁平鱗片狀，葉側出三角狀卵形、對生。雌雄同株，毬花單生枝頂，花期3～4月，果為毬果，果期9～11月種子厚無翅。
+　　黃金側柏性喜涼爽潮濕，日照充足且通風良好的環境，除供觀賞外，枝葉煮清水喝，有利尿止痛作用，但劑量多寡應慎重，宜遵醫囑才使用，否則用量太重，造成肺水腫，循環及呼吸功能衰竭。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_23" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -666,25 +655,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">23</td>
+					<td rowspan="3"><img class="plant_info_img" src="./23.jpg"></td>
+					<td>黃鵪菜、黃瓜菜</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Youngia japonica (Linn) DC.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">一年生草本，全株著生疏軟毛，莖幹內有白色乳汁。莖往往在基部或稍為上部分歧，直立葉大部分在根部附近長出，根葉叢生，倒披針形，基部漸細成葉柄狀，羽狀深裂，邊緣為不整齊齒牙緣，頂裂片較大，呈三角形或卵形。頭狀花多數，呈繖房狀圓錐花序著生莖頂。花冠黃色、舌形，總苞長5～6mm，內列總苞片約8枚，瘦果長約1.8mm，上部漸細，有細肋，粗糙，褐色，冠毛白色，長約3mm。
+　　嫩莖葉先用沸水燙過再炒食，味道尚可，全草含蛋白質鞣質，有機酸，醣類等。全草有利尿降血壓，清火疏肝，解毒消腫，及清瘀消水之功效。可治高血壓，眼睛紅腫，咽喉痛，腮腺炎，扁桃腺炎，肝炎，肺炎乾咳或咳血，肝硬化腹水，膀胱炎，尿道炎，白帶。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_11" style="display:none">
+		<div id="plant_table_24" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -695,21 +683,19 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">11</td>
-					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
-					<td>狗肝草、六角英、狗肝菜、華九頭獅子草、青蛇仔</td>
+					<td rowspan="3">24</td>
+					<td rowspan="3"><img class="plant_info_img" src="./24.jpg"></td>
+					<td>高麗草、韓國草、細葉結縷、高麗芝、朝鮮結縷草</td>
 				</tr>
 				<tr>
-					<td>Diclipiera chinensis Juss.</td>
+					<td>Zoysia tenuifolia willd</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>禾本科 Gramineae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生草本，全珠被短毛，葉對生、橢圓形、兩端銳尖，葉緣為全緣或波狀緣，有葉柄。四季開花，花腋生或頂生，小花2～3朵，粉紅色唇形，外有兩片大小苞葉，果實為蒴果，棒狀。莖方形多分枝節處易生根，形成叢生狀。
-
-　　枝葉有解熱消炎功效，主治肺炎、喉痛、吐瀉、跌打損傷、急性肝炎、風濕性關節炎等。治急性肝炎時以狗肝草及茵陳莖葉（乾品）各一兩以水煎服。</td>
+					<td colspan="2">匍匐性多年生草本，葉線形或披針形，花呈總狀花序，小穗散卵形呈聚合狀。匍匐莖多偃伏地表或地中延伸，自節間產生直立莖或鬚根。冬天葉子枯萎，翌春再長新葉。</td>
 				</tr>
 			</table>
 		</div>
