--- a/campus_plant/playground.html
+++ b/campus_plant/playground.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -13,7 +13,7 @@
 		location.href = str;
 	}
 	function forwardTable(index) {
-		var str = "./front/table.html?index=" + index;
+		var str = "./playground/table.html?index=" + index;
 		location.href = str;
 	}
 </script>
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'">校長宿舍</button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:block">
+			<div id="page_01" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -61,117 +61,117 @@
 					</tr>
 					<tr>
 						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/01.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('01');">掃帚菊、帶馬蘭</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Aster subulatus Michaux</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>菊科 Asteraceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/02.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('02');">栗豆樹、綠元寶</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Castanospermum australe	</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>蝶形花科 Fabaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/03.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('03');">細葉雪茄花、紅丁香</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Cuphea hyssopifolia</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>千屈菜科 Lythraceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/04.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('04');">狗牙根、百慕達草</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Cynodon dactylon (L) Pers.</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/05.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('05');">蠅翼草</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Desmodium triflorum(Linn.)DC</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>豆科 Leguminosae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/06.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('06');">升馬唐</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Digitaria ciliaris (Retz)Koel</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/07.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('07');">大絨馬唐</td>
 					</tr>
 					<tr>
-						<td>Cassia surattensis Burm.f.</td>
+						<td>Digitaria magna(Honda)Tsuyama</td>
 					</tr>
 					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/08.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('08');">牛筋草、蟋蟀草</td>
 					</tr>
 					<tr>
-						<td>Casuarina equisetifolia L.</td>
+						<td>Elusine indica (L.) Gaertn.</td>
 					</tr>
 					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/09.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('09');">野塘蒿</td>
 					</tr>
 					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
+						<td>Erigeron linifolius Willd.</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/10.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('10');">亞里垂榕</td>
 					</tr>
 					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
+						<td>Ficus binnendi jkii 'Alii'</td>
 					</tr>
 					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>桑科 Moraceae</td>
 					</tr>
 				</table>
 			</div>
-			<div id="page_02" style="display:block">
+			<div id="page_02" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -182,118 +182,118 @@
 						<td>名稱</td>
 					</tr>
 					<tr>
-						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3">11</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/11.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('11');">菩提樹、阿思多羅樹、思維樹、畢缽羅樹</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Ficus religiosa Linn.</td>
+					</tr>
+					<tr>
+						<td>桑科 Moraceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">12</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/12.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('12');">水蜈蚣</td>
+					</tr>
+					<tr>
+						<td>Killinga brerifolia Rottb.</td>
+					</tr>
+					<tr>
+						<td>莎草科 Cyperaceae</td>
+					</tr>
+					<tr>
+						<td rowspan="3">13</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/13.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('13');">血桐、橙桐、面頭果</td>
+					</tr>
+					<tr>
+						<td>Macaranga tanarius (L.)Muell.-Arg.</td>
 					</tr>
 					<tr>
 						<td>大戟科 Euphorbiaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3">14</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/14.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('14');">洋玉蘭、荷花玉蘭</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Magnolia grandiflora L.</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>木蘭科 Magnoliaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3">15</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/15.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('15');">水杉</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Metasequoia glyptostroboides</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>杉科 Taxodiaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3">16</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/16.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('16');">大黍、天竺草</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>anicum maximum Jacq</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3">17</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/17.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('17');">舖地黍、魚雷草</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Panicum repens Linn.</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3">18</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/18.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('18');">毛穎雀椑</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Paspalum. Conjugatum Berg.</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>禾木科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
+						<td rowspan="3">19</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/19.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('19');">兩耳草</td>
 					</tr>
 					<tr>
-						<td>Cassia surattensis Burm.f.</td>
+						<td>Paspalum conjugatum Berg.</td>
 					</tr>
 					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
+						<td rowspan="3">20</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/20.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('20');">長葉雀稗</td>
 					</tr>
 					<tr>
-						<td>Casuarina equisetifolia L.</td>
+						<td>Paspalum longifolium Roxb.</td>
 					</tr>
 					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
-					</tr>
-					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
-					</tr>
-					<tr>
-						<td>大戟科 Euphorbiaceae</td>
-					</tr>
-					<tr>
-						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
-					</tr>
-					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
-					</tr>
-					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>禾本科 Gramineaee</td>
 					</tr>
 				</table>
 			</div>
-			<div id="page_03" style="display:block">
+			<div id="page_03" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -304,70 +304,70 @@
 						<td>名稱</td>
 					</tr>
 					<tr>
-						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3">21</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/21.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('21');">繁星花</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Pentas lanceolata(Forsk) Schum.</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>茜草科 Rubiaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3">22</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/22.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('22');">羽裂蔓綠絨</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Philodendron selloum</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>天南星科 Araceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3">23</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/23.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('23');">洋商陸、美國商陸</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Phytolaccd americana L.</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>商陸科 Phytolaccaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3">24</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/24.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('24');">大理草、毛花雀稗</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Psapalum dilatatum Poire</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3">25</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/25.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('25');">鼠尾粟</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Sporobolus fertilis(Steud) W. D. Clayton</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3">26</td>
+						<td rowspan="3"><img class="plant_table_img" src="./playground/26.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('26');">堇寶蓮、肯氏蒲桃</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Syzygium cumini</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>桃金娘科 Myrtaceae</td>
 					</tr>
 				</table>
 			</div>
@@ -376,13 +376,6 @@
 			<button class="button button1" onclick="forwardPage('01');">1</button>
 			<button class="button button1" onclick="forwardPage('02');">2</button>
 			<button class="button button1" onclick="forwardPage('03');">3</button>
-			<button class="button button1" onclick="forwardPage('04');">4</button>
-			<button class="button button1" onclick="forwardPage('05');">5</button>
-			<button class="button button1" onclick="forwardPage('06');">6</button>
-			<button class="button button1" onclick="forwardPage('07');">7</button>
-			<button class="button button1" onclick="forwardPage('08');">8</button>
-			<button class="button button1" onclick="forwardPage('09');">9</button>
-			<button class="button button1" onclick="forwardPage('10');">10</button>
 		</div>
       </div>
     </div>
