--- a/campus_plant/principal-1.html
+++ b/campus_plant/principal-1.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -13,7 +13,7 @@
 		location.href = str;
 	}
 	function forwardTable(index) {
-		var str = "./front/table.html?index=" + index;
+		var str = "./principal-1/table.html?index=" + index;
 		location.href = str;
 	}
 </script>
@@ -61,40 +61,31 @@
 					</tr>
 					<tr>
 						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-1/01.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('01');">秋石斛</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Dendrobium x hybridum</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>蘭科 Orchidaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-1/02.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('02');">蝴蝶蘭</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Phalaenopsis sp.</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>蘭科 Orchidaceae</td>
 					</tr>
 				</table>
 			</div>
 		</div>
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
-			<button class="button button1" onclick="forwardPage('02');">2</button>
-			<button class="button button1" onclick="forwardPage('03');">3</button>
-			<button class="button button1" onclick="forwardPage('04');">4</button>
-			<button class="button button1" onclick="forwardPage('05');">5</button>
-			<button class="button button1" onclick="forwardPage('06');">6</button>
-			<button class="button button1" onclick="forwardPage('07');">7</button>
-			<button class="button button1" onclick="forwardPage('08');">8</button>
-			<button class="button button1" onclick="forwardPage('09');">9</button>
-			<button class="button button1" onclick="forwardPage('10');">10</button>
 		</div>
       </div>
     </div>
