--- a/campus_plant/principal-1/table.html
+++ b/campus_plant/principal-1/table.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -44,17 +44,18 @@
 				<tr>
 					<td rowspan="3">01</td>
 					<td rowspan="3"><img class="plant_info_img" src="./01.jpg"></td>
-					<td>紅葉鐵莧、紅桑</td>
+					<td>秋石斛</td>
 				</tr>
 				<tr>
-					<td>Acalypha wilkesianaMuell.-Arg.</td>
+					<td>Dendrobium x hybridum</td>
 				</tr>
 				<tr>
-					<td>大戟科 Euphorbiaceae</td>
+					<td>蘭科 Orchidaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生灌木，葉互生，葉片有各種色彩變化，寬卵形，先端尖，葉基心形，鋸齒緣，形若桑葉，因葉常紅色，故名「紅桑」。性喜陽光也耐乾旱，雌雄同株，雄花序穗狀紅褐色，長15～25公分，小花多數簇生其上，雌花序穗狀，紅褐色，每花具一紅褐色心形苞片，子房三室，花柱紅色鬚狀，繁殖可用分株法或阡插。</td>
+					<td colspan="2">著生蘭，根莖短，根多數，抽自於根莖的基部。莖叢生，直立，長10～30cm，節間長2～4cm，徑3～7mm，節的基部常有絲線狀的纖維。葉互生，披針形或橢圓狀披針形，長4～8cm，寬7～12mm，革質或厚紙質。花1～3枚，著生於第三年之老莖上部的節處叢生，白色或淡粉紅色或紫色，花梗連同子房長2～4cm，花瓣與後萼片相似，略短，唇瓣卵狀披針形，直立或近似直立，先端略反捲，長2～3cm，寬4～6mm，蕊柱甚短，花粉塊4枚，橢圓形，黃色。
+　　圖中為栽培之雜交種。</td>
 				</tr>
 			</table>
 		</div>
@@ -71,17 +72,19 @@
 				<tr>
 					<td rowspan="3">02</td>
 					<td rowspan="3"><img class="plant_info_img" src="./02.jpg"></td>
-					<td>黑板樹</td>
+					<td>蝴蝶蘭</td>
 				</tr>
 				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
+					<td>Phalaenopsis sp.</td>
 				</tr>
 				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
+					<td>蘭科 Orchidaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠喬木，枝輪生，具乳汁。葉6～10枚輪生，革質倒卵形，側脈平行。聚繖花序，花黃白色，莢果褐色，細圓柱形，叢生下垂，種子細長。樹幹挺直樹勢強健，耐風、抗污染。黑板樹是台中市之市樹。</td>
+					<td colspan="2">著生蘭，根線形，多數甚長，長20～40cm，徑2～3.5mm，灰白色，無莖。
+　　葉數枚，叢生，長橢圓狀橢圓形，或長橢圓形，長25～40cm，寬7～8cm，先端鈍或漸尖形，基部鈍而略呈緊縮狀。全緣，表面有光澤，綠色，中肋於表面凹下，背面略隆起，亞革質或略呈肉質。
+　　花數枚，白色或淡紫色或白中帶紫，呈疏生之總狀花序，徑6～8cm，略有香味，花莖甚長，30～50cm，抽自葉叢中，花瓣闊菱狀楔形，長4～6公分，寬4～6公分，先端鈍，基部有短爪，唇瓣3裂，側裂片直立，半菱狀長橢圓形，長2～3cm，中裂片三角形，先端有二條細長鬚狀物，花盤上有二深紅色之附屬物，花柱甚短。</td>
 				</tr>
 			</table>
 		</div>
