--- a/campus_plant/principal-2/table.html
+++ b/campus_plant/principal-2/table.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -44,17 +44,17 @@
 				<tr>
 					<td rowspan="3">01</td>
 					<td rowspan="3"><img class="plant_info_img" src="./01.jpg"></td>
-					<td>紅葉鐵莧、紅桑</td>
+					<td>春不老</td>
 				</tr>
 				<tr>
-					<td>Acalypha wilkesianaMuell.-Arg.</td>
+					<td>Ardisia squamulosa Presl</td>
 				</tr>
 				<tr>
-					<td>大戟科 Euphorbiaceae</td>
+					<td>春不老 Myrsinaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生灌木，葉互生，葉片有各種色彩變化，寬卵形，先端尖，葉基心形，鋸齒緣，形若桑葉，因葉常紅色，故名「紅桑」。性喜陽光也耐乾旱，雌雄同株，雄花序穗狀紅褐色，長15～25公分，小花多數簇生其上，雌花序穗狀，紅褐色，每花具一紅褐色心形苞片，子房三室，花柱紅色鬚狀，繁殖可用分株法或阡插。</td>
+					<td colspan="2">常綠灌木，葉互生，革質，橢圓形或披針形，開淡紫色小花，果為漿果，扁球形，熟時黑紫色，新枝及嫩葉淡紅色，常種在庭園中做為綠籬，以種子或阡插繁殖。</td>
 				</tr>
 			</table>
 		</div>
@@ -71,17 +71,19 @@
 				<tr>
 					<td rowspan="3">02</td>
 					<td rowspan="3"><img class="plant_info_img" src="./02.jpg"></td>
-					<td>黑板樹</td>
+					<td>鬼針草、咸豐草、蝦公鋏</td>
 				</tr>
 				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
+					<td>Bidens pilosa L.</td>
 				</tr>
 				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠喬木，枝輪生，具乳汁。葉6～10枚輪生，革質倒卵形，側脈平行。聚繖花序，花黃白色，莢果褐色，細圓柱形，叢生下垂，種子細長。樹幹挺直樹勢強健，耐風、抗污染。黑板樹是台中市之市樹。</td>
+					<td colspan="2">莖直立，方形，上端有疏毛，高25~90cm。中層莖葉對生，三出葉或羽狀全裂；上下表面有疏毛；上層莖葉對生或互生，三出葉或線狀披針形。頭狀花無舌片，徑8~9mm；總苞7或8匙形，外苞片長橢形，內苞片披針形，管狀花五裂。瘦果線形，4稜，有短毛，52~70，冠毛3或4。
+　　鬼針草原產北美，現已歸化台灣，分佈在低海拔，全島遍地均有生長，藉其瘦果上的短毛，附著在人畜之衣服皮毛上而可傳播。未成熟之果穗小孩子常用來互射，看誰射在對方衣服上的果穗多。
+　　鬼針草嫩莖葉可食，洗淨以滾熱之水燙過（短時間約一至二分鐘）炒食或加調味料食用。老莖葉洗淨煮水為夏日清涼飲料，消暑退火，嫩莖葉可供做藥用，與清水熬煮喝其汁液可消炎，利尿，解熱，治盲腸炎，肝病，糖尿病等，搗碎敷在癰疽，創傷患處可消腫退癀，拔膿生肌。</td>
 				</tr>
 			</table>
 		</div>
@@ -98,17 +100,17 @@
 				<tr>
 					<td rowspan="3">03</td>
 					<td rowspan="3"><img class="plant_info_img" src="./03.jpg"></td>
-					<td>肯氏南洋杉</td>
+					<td>澳洲鴨腳木</td>
 				</tr>
 				<tr>
-					<td>Araucaria cunninghamii Sweet</td>
+					<td>Brassaia actinophylla</td>
 				</tr>
 				<tr>
-					<td>南洋杉科 Araucariaceae</td>
+					<td>五加科 Araliaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠大喬木，樹皮常片狀剝落，側枝輪生，小枝由側枝向兩側生長，葉鑿形或三稜形，硬而尖銳會刺人，螺旋狀排列於小枝上，毬果寬卵形，種子藏於果鱗內，每一鱗片內含一種子。繁殖多用種子繁殖，如以側枝、插條繁殖之苗不能直立，除供觀賞外，樹幹可做建材。</td>
+					<td colspan="2">常綠喬木高可達30m，盆栽約1～2m。掌狀複葉小葉3～16枚，長橢圓形，疏鋸齒，葉端突尖，革質，葉面光滑明亮，對光線適應性強。以播種或阡插繁殖，性喜高溫多濕。</td>
 				</tr>
 			</table>
 		</div>
@@ -125,17 +127,19 @@
 				<tr>
 					<td rowspan="3">04</td>
 					<td rowspan="3"><img class="plant_info_img" src="./04.jpg"></td>
-					<td>黃金竹、金絲竹</td>
+					<td>茼蒿、蓬蒿</td>
 				</tr>
 				<tr>
-					<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+					<td>Chrysanthemum coronarium L.</td>
 				</tr>
 				<tr>
-					<td>禾本科 Gramineae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生，莖中空有節，莖高可達十餘公尺，金黃色有深綠色縱紋，寬窄不一，有時呈線狀，葉長橢圓狀針形，長15～20cm，寬5～7cm，先端漸尖呈短尾狀，基部鈍或圓鈍。葉脈平行脈，葉柄短，竹子數十年才開花，開完花竹子就漸枯萎，花兩性，果為穎果。</td>
+					<td colspan="2">一年生草本，葉互生，葉緣有疏齒裂。頭狀花小形或中形，花冠的顏色，管狀花為淺黃色，舌狀花為深黃色，春末夏初開花。
+　　茼蒿為香料類蔬菜與湯圓一起煮味美，也可做為蔬菜單獨煮食，因煮後體積縮小很多，故有人稱為打妻菜（Phah-bo-chhai）意指太太在煮菜過程中偷吃，才會把菜煮得變少，故而責備她甚至打她。
+　　茼蒿以種子繁殖，秋末播種。</td>
 				</tr>
 			</table>
 		</div>
@@ -152,21 +156,18 @@
 				<tr>
 					<td rowspan="3">05</td>
 					<td rowspan="3"><img class="plant_info_img" src="./05.jpg"></td>
-					<td>苧麻、裏白苧麻、真麻</td>
+					<td>蘄艾、芙蓉菊、芙蓉、海芙蓉、年年艾</td>
 				</tr>
 				<tr>
-					<td>Boehmeria nivea (L.) Gaud</td>
+					<td>Crossostephium chinense(L.) Makino</td>
 				</tr>
 				<tr>
-					<td>蕁麻科 Urticaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠性亞灌木，高一至二公尺，多分枝，小枝灰褐色，有一些毛茸。葉互生具托葉，有柄，葉身廣卵形或心臟形，先端銳至銳尖，基部心形至楔形，厚質，葉緣有鈍鋸齒，上表面翠綠光滑，下表面密生白毛，主脈三條，葉柄長三至八公分，托葉披針形。雌雄同株，單性花，小花數簇成球狀，排成圓錐花序，腋出，瘦果扁卵狀，被有細毛。
-
-　　苧麻之莖富含纖維，可製繩索或織麻布是人造纖維工業未發達前的重要麻布原料，嫩莖葉及根部可做蔬菜。
-
-　　全草具有涼血安胎，清熱利尿，消炎解毒的功效。根主治肺炎、肝炎、腎炎、感冒發熱、痲疹高燒、哮喘、糖尿病、淋病、胎動不安。根外用治跌打損傷、骨折、腫毒瘡瘍。葉治肺炎、肝炎，外用治刀傷出血、虫蛇咬傷。</td>
+					<td colspan="2">多年生常綠亞灌木，分枝甚多，平展，密被灰色柔毛；葉狹匙形至倒卵狀倒披針形，長2～5cm，寬0.2～2cm，全緣或先端三裂，偶有3～5羽裂，鈍頭，表面被白色柔毛。秋末冬初開花，頭狀花序頂生，半球形，淡黃色，徑約3～7mm，密生絨毛，中央為兩性花，周圍有一列雌花，兩種花均呈管狀；瘦果長橢圓形，有五稜，冠毛短，繁殖可用分株法。
+　　根葉或全草可入藥，具行血袪風，逐濕除痛，消腫解毒，止痰鎮咳，去瘀療傷功效，主治風濕性骨節痛，長年頭風，月內風，風寒感冒，百日咳，氣管炎，乳腺炎，疔瘡腫毒，下消腎虛，胃痛，小兒胎毒，兒 童發育不良，跌打內外傷等。外用主治跌打內外傷，皮膚炎，淋病等。本品不宜單味長久服用，可加排骨，土雞，豬腳燉煮。</td>
 				</tr>
 			</table>
 		</div>
@@ -183,17 +184,17 @@
 				<tr>
 					<td rowspan="3">06</td>
 					<td rowspan="3"><img class="plant_info_img" src="./06.jpg"></td>
-					<td>九重葛、三角花、三角梅、南美紫茉莉</td>
+					<td>南瓜、金瓜、番瓜</td>
 				</tr>
 				<tr>
-					<td>Bougainvillea spp.</td>
+					<td>Curcurbita moschata(Duch) Poir. var.toons Makino.</td>
 				</tr>
 				<tr>
-					<td>紫茉莉科Nyctaginaceae</td>
+					<td>葫蘆科 Cucurbitaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠蔓性灌木，葉互生，葉腋長有刺，枝葉生長茂密，葉全緣，心臟形或三角形，花小形而不顯著，筒狀5～6裂，雄蕊7～8枚，子房有柄，花外有大形顯著之花瓣狀苞片，一般誤以為花，苞片之顏色有紅、紫、白、黃、粉紅等，苞片有單瓣、重瓣之品種，花期多在冬春季。九重葛為屏東縣之縣樹，繁殖法，重瓣品種用高壓，單瓣品種用插枝，於春季施行育苗工作。</td>
+					<td colspan="2">一年生或宿根性蔓性草本莖葉上密生毛茸，莖做橫臥或攀緣狀。葉心形，全緣或淺裂，卷鬚為2或更多裂。雌雄同株，單性花，花大輪，色黃，萼片4～7；花冠為鐘形五中裂。雄花有雄蕊3，雌花之花柱短，柱頭3～5。果實大型，形狀與色彩因品種而各不同，果實肉質含澱粉多。常吃南瓜可治糖尿病，南瓜子可防攝護腺炎。</td>
 				</tr>
 			</table>
 		</div>
@@ -210,17 +211,18 @@
 				<tr>
 					<td rowspan="3">07</td>
 					<td rowspan="3"><img class="plant_info_img" src="./07.jpg"></td>
-					<td>黃槐</td>
+					<td>大王黛粉葉、啞蕉、廣東萬年青</td>
 				</tr>
 				<tr>
-					<td>Cassia surattensis Burm.f.</td>
+					<td>Dieffenbachia amoena</td>
 				</tr>
 				<tr>
-					<td>蘇木科 Caesalpiniaceae</td>
+					<td>天南星科 Araceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">落葉小喬木，葉互生，偶數羽狀複葉，小葉對生，橢圓形長約3公分，最下端的一、二對葉在總柄處有腺狀凸出物。花腋生，總狀繖房花序，花黃色，徑約3～4公分，花瓣5片，卵形，雄蕊10枚其中三枚無花蕊，莢果扁平。花黃色鮮艷，花期長自三月～十一月均開花，尤其在夏天暑熱中見到滿樹黃花，心情更是清爽。黃槐的小葉會進行睡眠運動，幾乎整年均開花，甚為奇特，黃槐之葉可做瀉藥，木材能夠造紙，繁殖以播種繁殖，黃槐宜栽植在風勢較小之處，因其根系不甚發達而且莖較脆弱。</td>
+					<td colspan="2">多年生草本，莖直立粗壯節間短。葉長橢圓形至披針形，先端銳形，略呈波狀緣，葉面散佈各種乳白或乳黃色斑紋或斑點。葉柄基部呈鞘狀，佛燄苞綠色，佛燄花序上部為雄花，下部為雌花。
+　　黛粉葉之汁液有毒，性喜溫濕環境，可用阡插繁殖。</td>
 				</tr>
 			</table>
 		</div>
@@ -237,17 +239,17 @@
 				<tr>
 					<td rowspan="3">08</td>
 					<td rowspan="3"><img class="plant_info_img" src="./08.jpg"></td>
-					<td>叢生木麻黃、千頭木麻黃</td>
+					<td>革質黛粉葉、大發財樹</td>
 				</tr>
 				<tr>
-					<td>Casuarina equisetifolia L.</td>
+					<td>Dieffenbachia daguensis</td>
 				</tr>
 				<tr>
-					<td>木麻黃科 Casuarinaceae</td>
+					<td>天南星科 Araceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠小喬木，株高約1～2公尺，葉退化成小枝狀，輪生，具6～8稜角，各葉有6～8鞘齒，春季4～5月開花，雄花灰褐色，雌花紅色，瘦果橢圓形，耐旱、耐鹽、抗風。</td>
+					<td colspan="2">革葉黛粉葉，耐陰性強，葉片肥厚碩大近革質，濃綠富光澤，盆栽作室內擺飾，早晚葉緣常凝聚許多水珠，象徵錢水滾滾，被視為吉祥植物。</td>
 				</tr>
 			</table>
 		</div>
@@ -264,19 +266,18 @@
 				<tr>
 					<td rowspan="3">09</td>
 					<td rowspan="3"><img class="plant_info_img" src="./09.jpg"></td>
-					<td>變葉木</td>
+					<td>佛州星點木</td>
 				</tr>
 				<tr>
-					<td>Codiaeum variegatum(L.) Juss</td>
+					<td>Dracaena godseffianacv. 'Florida Beauty'</td>
 				</tr>
 				<tr>
-					<td>大戟科 Euphorbiaceae</td>
+					<td>龍舌蘭科 Agavaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠灌木，葉為單葉互生。總狀花序，腋生，花小型，單性雌雄同株，雄蕊20～30枚，有長花梗，雌花無瓣幾無梗，子房3室，蒴果球形或略扁。
-
-　　原產東印度，南洋群島及澳洲，變葉木之葉形及色彩變異極大，形狀常見有橢圓形，披針形，心形或有缺刻，顏色常見者有：綠、黃紅及雜色等，莖、葉之汁液有毒，誤食之會有腹痛、腹瀉等症狀，可做瀉劑或發汗劑。利用嫩枝阡插繁殖，半個月便會發根。</td>
+					<td colspan="2">常綠灌木，株高可達一公尺。葉對生或三葉輪生，橢圓狀披針形或長卵形，葉革質，葉面有許多乳黃色或乳白色小斑點，如繁星點點故名星點木；佛州星點木葉片乳黃色斑點大且密集，成株夏天開花，總狀花序，小花長筒狀，果為紅色漿果。
+　　星點木，耐旱耐陰，可用播種，阡插或分株法繁殖，以阡插為主，春、秋季為阡插適期，以帶葉之枝條或莖頂，每段2～3節，葉片剪半，插於濕潤沙床，約一個月發根，栽培處須排水良好。</td>
 				</tr>
 			</table>
 		</div>
@@ -293,21 +294,22 @@
 				<tr>
 					<td rowspan="3">10</td>
 					<td rowspan="3"><img class="plant_info_img" src="./10.jpg"></td>
-					<td>鳥尾花</td>
+					<td>醴腸、蓮子草、墨菜、旱蓮草 </td>
 				</tr>
 				<tr>
-					<td>Crossandra infundbuliformis(L.) Nees</td>
+					<td>Eclipta prostrata L.</td>
 				</tr>
 				<tr>
-					<td>爵床科 Acanthaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠亞灌木，葉狹卵形至披針形。花序為穗狀，花不整齊，花萼5裂；花冠基部管狀 ，上部5裂，橙紅色，雄蕊4枚呈兩體小蕊，著生於花冠上，果為蒴果，花期長，春季至秋季均開花，繁殖以種子或阡插法。</td>
+					<td colspan="2">一年生匍匐性草本或傾伏性且多分歧之莖，全株粗糙，有毛高約15～60cm，葉對生，頭狀花白色，中央部分淺綠，舌狀花在外，兩列，管狀花多數在內，果為黑色瘦果，無冠毛，常長在水溝邊或田邊。
+　　嫩莖葉可炒食，能補腎，止血痢，固牙齒，常吃可使頭髮黑烏。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_01" style="display:none">
+		<div id="plant_table_11" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -318,23 +320,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">01</td>
-					<td rowspan="3"><img class="plant_info_img" src="./01.jpg"></td>
-					<td>紅葉鐵莧、紅桑</td>
+					<td rowspan="3">11</td>
+					<td rowspan="3"><img class="plant_info_img" src="./11.jpg"></td>
+					<td>紅鳳菜、紅菜、腳目菜、紫背天葵</td>
 				</tr>
 				<tr>
-					<td>Acalypha wilkesianaMuell.-Arg.</td>
+					<td>Gynura bicolor (Willd.) DC.</td>
 				</tr>
 				<tr>
-					<td>大戟科 Euphorbiaceae</td>
+					<td>菊科 Compositae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生灌木，葉互生，葉片有各種色彩變化，寬卵形，先端尖，葉基心形，鋸齒緣，形若桑葉，因葉常紅色，故名「紅桑」。性喜陽光也耐乾旱，雌雄同株，雄花序穗狀紅褐色，長15～25公分，小花多數簇生其上，雌花序穗狀，紅褐色，每花具一紅褐色心形苞片，子房三室，花柱紅色鬚狀，繁殖可用分株法或阡插。</td>
+					<td colspan="2">多年生草本，莖深紅紫色，全株柔軟肉質。莖葉光滑，有少數分枝。葉互生，上表面綠色，下表面及葉柄紅紫色，葉片倒卵形至倒披針形，長5～10cm，先端銳利，邊緣有不規則鋸齒，中肋顯著，帶紅色，側脈7至10對，不對稱。春或秋天開花，頭狀花序，有長梗，花菊黃色，瘦果圓筒狀，有冠毛。
+　　嫩莖葉可做蔬菜，莖葉可入藥，具清熱解毒，涼血止血功用。主治咳血、血熱吐血、血崩、貧血、支氣管炎、中暑愛睏、阿米巴痢疾、經痛、高血壓。外用治刀傷出血，疔瘡傷口潰瘍久不收口等。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_02" style="display:none">
+		<div id="plant_table_12" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -345,23 +348,23 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">02</td>
-					<td rowspan="3"><img class="plant_info_img" src="./02.jpg"></td>
-					<td>黑板樹</td>
+					<td rowspan="3">12</td>
+					<td rowspan="3"><img class="plant_info_img" src="./12.jpg"></td>
+					<td>瓠子、瓢瓜</td>
 				</tr>
 				<tr>
-					<td>Alotonia scholaris (L.)R.Br.</td>
+					<td>Lagenaria siceraria(Mol.) Standl</td>
 				</tr>
 				<tr>
-					<td>夾竹桃科 Apocynaceae</td>
+					<td>葫蘆科 Cucurbitaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠喬木，枝輪生，具乳汁。葉6～10枚輪生，革質倒卵形，側脈平行。聚繖花序，花黃白色，莢果褐色，細圓柱形，叢生下垂，種子細長。樹幹挺直樹勢強健，耐風、抗污染。黑板樹是台中市之市樹。</td>
+					<td colspan="2">一年生蔓性草本，蔓粗大可達20m以上，藉莖卷鬚攀緣他物而上昇，莖葉上有毛茸。根為淺根性，葉互生，有柄，心臟形或腎臟形，或掌狀淺裂，葉寬20～30cm，長20～25cm，花雌雄同株，腋生，色白，夜間開花，花冠五裂，果實圓筒形或洋梨形，果皮上生白色細毛茸。嫩果實供做蔬果食用，老熟果實除去裏面之種子及果肉可做容器盛水用。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_03" style="display:none">
+		<div id="plant_table_13" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -372,23 +375,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">03</td>
-					<td rowspan="3"><img class="plant_info_img" src="./03.jpg"></td>
-					<td>肯氏南洋杉</td>
+					<td rowspan="3">13</td>
+					<td rowspan="3"><img class="plant_info_img" src="./13.jpg"></td>
+					<td>絲瓜、布瓜、天羅、水瓜</td>
 				</tr>
 				<tr>
-					<td>Araucaria cunninghamii Sweet</td>
+					<td>Luffa cylindrica (L.)Roem</td>
 				</tr>
 				<tr>
-					<td>南洋杉科 Araucariaceae</td>
+					<td>瓜科 Cucurbitaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠大喬木，樹皮常片狀剝落，側枝輪生，小枝由側枝向兩側生長，葉鑿形或三稜形，硬而尖銳會刺人，螺旋狀排列於小枝上，毬果寬卵形，種子藏於果鱗內，每一鱗片內含一種子。繁殖多用種子繁殖，如以側枝、插條繁殖之苗不能直立，除供觀賞外，樹幹可做建材。</td>
+					<td colspan="2">一年生攀緣性草本，莖細長，表面粗糙，藉莖卷鬚纏繞於他物而攀爬，卷鬚稍被毛，二至四叉，葉互生，掌狀分裂，裂片尖銳，長約15～25cm，寬約12～22cm；春末至中秋開花，雌雄同株，單性花，雄花為總狀花序生於總花梗頂端，每日清晨開一朵，傍晚即凋落，雄蕊五枚，雌花花萼裂片卵狀披針形，有長梗，子房下位，柱頭三，膨大，雄、雌花均鮮黃色，果為瓠果長圓筒形，內藏多數種子。
+　　絲瓜之根可治鼻炎，蔓莖可治鼻炎，支氣管炎，咳嗽，月經不調，四肢麻木，葉治咳嗽，百日咳，種子治咳嗽痰多，便秘，瓜絡治乳汁不通，乳腺炎，花治咽喉炎，咳嗽。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_04" style="display:none">
+		<div id="plant_table_14" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -399,23 +403,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">04</td>
-					<td rowspan="3"><img class="plant_info_img" src="./04.jpg"></td>
-					<td>黃金竹、金絲竹</td>
+					<td rowspan="3">14</td>
+					<td rowspan="3"><img class="plant_info_img" src="./14.jpg"></td>
+					<td>台灣華山松、五葉松</td>
 				</tr>
 				<tr>
-					<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+					<td>Pinus armandii Fr.var. masteriana Hay.</td>
 				</tr>
 				<tr>
-					<td>禾本科 Gramineae</td>
+					<td>松科 Pinaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">多年生，莖中空有節，莖高可達十餘公尺，金黃色有深綠色縱紋，寬窄不一，有時呈線狀，葉長橢圓狀針形，長15～20cm，寬5～7cm，先端漸尖呈短尾狀，基部鈍或圓鈍。葉脈平行脈，葉柄短，竹子數十年才開花，開完花竹子就漸枯萎，花兩性，果為穎果。</td>
+					<td colspan="2">常綠大喬木，葉五針一束，長5～10公分，葉鞘早落，球果卵圓形，長5～10公分，果鱗前端不反捲，種子無翅，可食。
+　　華山松樹幹直，木材供建築，造紙，火柴梗等用途。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_05" style="display:none">
+		<div id="plant_table_15" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -426,27 +431,24 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">05</td>
-					<td rowspan="3"><img class="plant_info_img" src="./05.jpg"></td>
-					<td>苧麻、裏白苧麻、真麻</td>
+					<td rowspan="3">15</td>
+					<td rowspan="3"><img class="plant_info_img" src="./15.jpg"></td>
+					<td>隼人瓜、梨瓜、佛手瓜</td>
 				</tr>
 				<tr>
-					<td>Boehmeria nivea (L.) Gaud</td>
+					<td>Sechium edule(Jacq.) Swartz</td>
 				</tr>
 				<tr>
-					<td>蕁麻科 Urticaceae</td>
+					<td>葫蘆科 Cucurbitaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠性亞灌木，高一至二公尺，多分枝，小枝灰褐色，有一些毛茸。葉互生具托葉，有柄，葉身廣卵形或心臟形，先端銳至銳尖，基部心形至楔形，厚質，葉緣有鈍鋸齒，上表面翠綠光滑，下表面密生白毛，主脈三條，葉柄長三至八公分，托葉披針形。雌雄同株，單性花，小花數簇成球狀，排成圓錐花序，腋出，瘦果扁卵狀，被有細毛。
-
-　　苧麻之莖富含纖維，可製繩索或織麻布是人造纖維工業未發達前的重要麻布原料，嫩莖葉及根部可做蔬菜。
-
-　　全草具有涼血安胎，清熱利尿，消炎解毒的功效。根主治肺炎、肝炎、腎炎、感冒發熱、痲疹高燒、哮喘、糖尿病、淋病、胎動不安。根外用治跌打損傷、骨折、腫毒瘡瘍。葉治肺炎、肝炎，外用治刀傷出血、虫蛇咬傷。</td>
+					<td colspan="2">多年生蔓性攀緣莖，生有疏毛，通常卷鬚大型，2～5分歧，葉對生，花小，雌雄同株，雄蕊1～2個雄花呈小房狀，皆為腋生。花萼皿狀五裂，花冠杯狀五深裂，裂片卵狀披針形。果實多肉，洋梨形或球形，表面有五裂溝。
+　　果及塊根含澱粉可食用，老莖為優良纖維可加工利用。</td>
 				</tr>
 			</table>
 		</div>
-		<div id="plant_table_06" style="display:none">
+		<div id="plant_table_16" style="display:none">
 			<table>
 			<col width="70">
 			<col width="140">
@@ -457,19 +459,19 @@
 					<td>名稱</td>
 				</tr>
 				<tr>
-					<td rowspan="3">06</td>
-					<td rowspan="3"><img class="plant_info_img" src="./06.jpg"></td>
-					<td>九重葛、三角花、三角梅、南美紫茉莉</td>
+					<td rowspan="3">16</td>
+					<td rowspan="3"><img class="plant_info_img" src="./16.jpg"></td>
+					<td>大岩桐</td>
 				</tr>
 				<tr>
-					<td>Bougainvillea spp.</td>
+					<td>Sinningia Speciosa（Lodd.）Banth.ettlook.</td>
 				</tr>
 				<tr>
-					<td>紫茉莉科Nyctaginaceae</td>
+					<td>苦苣苔科 Gesneriaceae</td>
 				</tr>
 				<tr>
 					<td>介紹</td>
-					<td colspan="2">常綠蔓性灌木，葉互生，葉腋長有刺，枝葉生長茂密，葉全緣，心臟形或三角形，花小形而不顯著，筒狀5～6裂，雄蕊7～8枚，子房有柄，花外有大形顯著之花瓣狀苞片，一般誤以為花，苞片之顏色有紅、紫、白、黃、粉紅等，苞片有單瓣、重瓣之品種，花期多在冬春季。九重葛為屏東縣之縣樹，繁殖法，重瓣品種用高壓，單瓣品種用插枝，於春季施行育苗工作。</td>
+					<td colspan="2">多年生草木，高約30cm，葉叢生基部，葉及花梗均為肉質，柔軟多汁，有絨毛。葉長橢圓形，花梗自莖基抽出，花冠筒狀，5～8裂，有紅、紫、白等色，又分單瓣及重瓣兩類，果為蒴果，種子細小，春天至秋天開花。繁殖可用種子也可以用葉片扦插。</td>
 				</tr>
 			</table>
 		</div>
