--- a/campus_plant/back.html
+++ b/campus_plant/back.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -13,7 +13,7 @@
 		location.href = str;
 	}
 	function forwardTable(index) {
-		var str = "./front/table.html?index=" + index;
+		var str = "./back/table.html?index=" + index;
 		location.href = str;
 	}
 </script>
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'">校長宿舍</button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:block">
+			<div id="page_01" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -61,117 +61,117 @@
 					</tr>
 					<tr>
 						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/01.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紫莖牛膝</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Achyranthes asperavar. rubrofusca</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>莧科 Amaranthaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/02.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('02');">野莧、豬莧、綠莧、山行菜、鳥杏</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Amaranthus viridis L.</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>莧科 Amaranthaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/03.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('03');">麵包樹、麵包果樹</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Artocarpus altilis(Park.) Fosberg</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>桑科 Moraceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/04.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('04');">楊桃、羊桃</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Averrhoa carambola</td>
 					</tr>
 					<tr>
-						<td>禾本科 Gramineae</td>
+						<td>楊桃科 Averrhoaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/05.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('05');">木苧麻、密花苧麻、山水柳、蝦公鬚</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td> Boehmeria densifloraHok.et Arn	</td>
 					</tr>
 					<tr>
 						<td>蕁麻科 Urticaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/06.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('06');">食用雙囊蕨、過溝菜蕨、過山貓</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Diplazium esculentum Sw.</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>水龍骨科 Polypodiaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/07.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('07');">昭和草、饑荒草</td>
 					</tr>
 					<tr>
-						<td>Cassia surattensis Burm.f.</td>
+						<td>Erechtites hieracifolia (L.)Raf.</td>
 					</tr>
 					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/08.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('08');">稜果榕</td>
 					</tr>
 					<tr>
-						<td>Casuarina equisetifolia L.</td>
+						<td>Ficus septica Burm. f.</td>
 					</tr>
 					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
+						<td>桑科 Moraceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/09.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('09');">黃槿</td>
 					</tr>
 					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
+						<td>Hibiscus tiliaceus Linn.</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>錦葵科 Malvaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/10.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('10');">酒瓶椰子</td>
 					</tr>
 					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
+						<td>Hyophorbe amaricaulis Mart.</td>
 					</tr>
 					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>棕櫚科 Palmae</td>
 					</tr>
 				</table>
 			</div>
-			<div id="page_02" style="display:block">
+			<div id="page_02" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -182,114 +182,114 @@
 						<td>名稱</td>
 					</tr>
 					<tr>
-						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3">11</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/11.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('11');">女貞、小實女貞</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Ligustrum microcarpumKanehira & Sasaki</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>木犀科 Oleaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3">12</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/12.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('12');">南天竹</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Nandina domestica Thunb</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>小檗科 Berbeidaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3">13</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/13.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('13');">火炭母草、冷飯藤</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Polygonum Cninensis L.</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>蓼科 Polygonaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3">14</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/14.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('14');">羽葉福祿桐</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>五加科 Araliaceae</td>
 					</tr>
 					<tr>
 						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3">15</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/15.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('15');">水黃皮</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Pongamia pinnata(Linn) Pierre ex Merr.</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>蝶形花科 Papilimaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3">16</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/16.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('16');">冇骨消、蒴翟、陸英</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Sambucus formosana Nakai</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>忍冬科 Caprifoliaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
+						<td rowspan="3">17</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/17.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('17');">龍葵、水茄、苦葵</td>
 					</tr>
 					<tr>
-						<td>Cassia surattensis Burm.f.</td>
+						<td>Solanum nigrum L.</td>
 					</tr>
 					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
+						<td>茄科 Solanaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
+						<td rowspan="3">18</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/18.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('18');">欖仁</td>
 					</tr>
 					<tr>
-						<td>Casuarina equisetifolia L.</td>
+						<td>Terminalia catappa L.</td>
 					</tr>
 					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
+						<td>使君子科 Combretaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
+						<td rowspan="3">19</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/19.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('19');">玉米、玉蜀黍、包穀</td>
 					</tr>
 					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
+						<td>Zea mays</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>禾本科 Gramineae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
+						<td rowspan="3">20</td>
+						<td rowspan="3"><img class="plant_table_img" src="./back/20.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('20');">櫸木、雞油</td>
 					</tr>
 					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
+						<td>Zelkova serrata(Thunb.) Makino</td>
 					</tr>
 					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>榆科 Ulmaceae</td>
 					</tr>
 				</table>
 			</div>
@@ -297,14 +297,6 @@
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
 			<button class="button button1" onclick="forwardPage('02');">2</button>
-			<button class="button button1" onclick="forwardPage('03');">3</button>
-			<button class="button button1" onclick="forwardPage('04');">4</button>
-			<button class="button button1" onclick="forwardPage('05');">5</button>
-			<button class="button button1" onclick="forwardPage('06');">6</button>
-			<button class="button button1" onclick="forwardPage('07');">7</button>
-			<button class="button button1" onclick="forwardPage('08');">8</button>
-			<button class="button button1" onclick="forwardPage('09');">9</button>
-			<button class="button button1" onclick="forwardPage('10');">10</button>
 		</div>
       </div>
     </div>
