--- a/campus_plant/principal-2.html
+++ b/campus_plant/principal-2.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
 <head>
   <title>樹林高中校園花草</title>
@@ -13,7 +13,7 @@
 		location.href = str;
 	}
 	function forwardTable(index) {
-		var str = "./front/table.html?index=" + index;
+		var str = "./principal-2/table.html?index=" + index;
 		location.href = str;
 	}
 </script>
@@ -49,7 +49,7 @@
 			<button class="button button1" onclick="location.href='principal-2.html'"><b>校長宿舍</b></button>
 		</div>
 		<div id="plant_table">
-			<div id="page_01" style="display:block">
+			<div id="page_01" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -61,117 +61,117 @@
 					</tr>
 					<tr>
 						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/01.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('01');">春不老</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Ardisia squamulosa Presl</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>春不老 Myrsinaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/02.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('02');">鬼針草、咸豐草、蝦公鋏</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Bidens pilosa L.</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/03.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('03');">澳洲鴨腳木</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Brassaia actinophylla</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>五加科 Araliaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/04.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('04');">茼蒿、蓬蒿</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Chrysanthemum coronarium L.</td>
 					</tr>
 					<tr>
-						<td>禾本科 Gramineae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/05.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('05');">蘄艾、芙蓉菊、芙蓉、海芙蓉、年年艾</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Crossostephium chinense(L.) Makino</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>菊科Compositae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/06.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('06');">南瓜、金瓜、番瓜</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Curcurbita moschata(Duch) Poir. var.toons Makino.</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>葫蘆科 Cucurbitaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">07</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/07.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('07');">黃槐</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/07.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('07');">大王黛粉葉、啞蕉廣東萬年青</td>
 					</tr>
 					<tr>
-						<td>Cassia surattensis Burm.f.</td>
+						<td>Dieffenbachia amoena</td>
 					</tr>
 					<tr>
-						<td>蘇木科 Caesalpiniaceae</td>
+						<td>天南星科 Araceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">08</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/08.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('08');">叢生木麻黃、千頭木麻黃</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/08.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('08');">革質黛粉葉、大發財樹</td>
 					</tr>
 					<tr>
-						<td>Casuarina equisetifolia L.</td>
+						<td>Dieffenbachia daguensis</td>
 					</tr>
 					<tr>
-						<td>木麻黃科 Casuarinaceae</td>
+						<td>天南星科 Araceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">09</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/09.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('09');">變葉木</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/09.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('09');">佛州星點木</td>
 					</tr>
 					<tr>
-						<td>Codiaeum variegatum(L.) Juss</td>
+						<td>Dracaena godseffianacv. 'Florida Beauty'</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>龍舌蘭科 Agavaceae</td>
 					</tr>
 					<tr>
 						<td rowspan="3">10</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/10.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('10');">鳥尾花</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/10.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('10');">醴腸、蓮子草、墨菜、旱蓮草</td>
 					</tr>
 					<tr>
-						<td>Crossandra infundbuliformis(L.) Nees</td>
+						<td>Eclipta prostrata L.</td>
 					</tr>
 					<tr>
-						<td>爵床科 Acanthaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 				</table>
 			</div>
-			<div id="page_02" style="display:block">
+			<div id="page_02" style="display:none">
 				<table>
 				<col width="70">
 				<col width="140">
@@ -182,70 +182,70 @@
 						<td>名稱</td>
 					</tr>
 					<tr>
-						<td rowspan="3">01</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/01.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('01');">紅葉鐵莧、紅桑</td>
+						<td rowspan="3">11</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/11.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('11');">紅鳳菜、紅菜、腳目菜、紫背天葵</td>
 					</tr>
 					<tr>
-						<td><i>Acalypha wilkesianaMuell.</i>-Arg.</td>
+						<td>Gynura bicolor (Willd.) DC.</td>
 					</tr>
 					<tr>
-						<td>大戟科 Euphorbiaceae</td>
+						<td>菊科 Compositae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">02</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/02.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('02');">黑板樹</td>
+						<td rowspan="3">12</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/12.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('12');">瓠子、瓢瓜</td>
 					</tr>
 					<tr>
-						<td>Alotonia scholaris (L.)R.Br.</td>
+						<td>Lagenaria siceraria(Mol.) Standl</td>
 					</tr>
 					<tr>
-						<td>夾竹桃科 Apocynaceae</td>
+						<td>葫蘆科 Cucurbitaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">03</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/03.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('03');">肯氏南洋杉</td>
+						<td rowspan="3">13</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/13.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('13');">絲瓜、布瓜、天羅、水瓜</td>
 					</tr>
 					<tr>
-						<td>Araucaria cunninghamii Sweet</td>
+						<td>Luffa cylindrica (L.)Roem</td>
 					</tr>
 					<tr>
-						<td>南洋杉科 Araucariaceae</td>
+						<td>瓜科 Cucurbitaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">04</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/04.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('04');">黃金竹、金絲竹</td>
+						<td rowspan="3">14</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/14.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('14');">台灣華山松、五葉松</td>
 					</tr>
 					<tr>
-						<td>Bambusa vulgarisSchrad Ex. Wendl.var.Striata Gamble</td>
+						<td>Pinus armandii Fr.var. masteriana Hay.</td>
 					</tr>
 					<tr>
-						<td>禾本科 Gramineae</td>
+						<td>松科 Pinaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">05</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/05.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('05');">苧麻、裏白苧麻、真麻</td>
+						<td rowspan="3">15</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/15.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('15');">隼人瓜、梨瓜、佛手瓜</td>
 					</tr>
 					<tr>
-						<td>Boehmeria nivea (L.) Gaud</td>
+						<td>Sechium edule(Jacq.) Swartz</td>
 					</tr>
 					<tr>
-						<td>蕁麻科 Urticaceae</td>
+						<td>葫蘆科 Cucurbitaceae</td>
 					</tr>
 					<tr>
-						<td rowspan="3">06</td>
-						<td rowspan="3"><img class="plant_table_img" src="./front/06.jpg"></td>
-						<td><a href="javascript:void(0);" onclick="forwardTable('06');">九重葛、三角花、三角梅、南美紫茉莉</td>
+						<td rowspan="3">16</td>
+						<td rowspan="3"><img class="plant_table_img" src="./principal-2/16.jpg"></td>
+						<td><a href="javascript:void(0);" onclick="forwardTable('16');">大岩桐</td>
 					</tr>
 					<tr>
-						<td>Bougainvillea spp.</td>
+						<td>Sinningia Speciosa（Lodd.）Banth.ettlook.</td>
 					</tr>
 					<tr>
-						<td>紫茉莉科 Nyctaginaceae</td>
+						<td>苦苣苔科 Gesneriaceae</td>
 					</tr>
 				</table>
 			</div>
@@ -253,14 +253,6 @@
 		<div id="select_page" align="center">
 			<button class="button button1" onclick="forwardPage('01');">1</button>
 			<button class="button button1" onclick="forwardPage('02');">2</button>
-			<button class="button button1" onclick="forwardPage('03');">3</button>
-			<button class="button button1" onclick="forwardPage('04');">4</button>
-			<button class="button button1" onclick="forwardPage('05');">5</button>
-			<button class="button button1" onclick="forwardPage('06');">6</button>
-			<button class="button button1" onclick="forwardPage('07');">7</button>
-			<button class="button button1" onclick="forwardPage('08');">8</button>
-			<button class="button button1" onclick="forwardPage('09');">9</button>
-			<button class="button button1" onclick="forwardPage('10');">10</button>
 		</div>
       </div>
     </div>
